# sboxgates

./: .travis.yml  CITATION.cff  CMakeLists.txt  README.md  boolfunc.c  boolfunc.h  build-mpi.sh  build.sh  codemeta.json  convert_graph.c  convert_graph.h  gates.xsd  lut.c  lut.h  paper.bib  paper.md  sboxgates.c  sboxgates.h  state.c  state.h
sboxes/: crypto1_fa.txt  crypto1_fb.txt  crypto1_fc.txt  des_s1.txt  linear.txt  sodark.txt
